# engine

./: .dockerignore  .gitignore  .mise.toml  .prettierignore  .prettierrc.json  .rustfmt.toml  .tarpaulin.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.integration  ENDPOINTS.md  LICENSE  LICENSE.md  Makefile  NOTICE  NOTICE.md  PROJECT.md  README.md  SECURITY.md  TESTING.md  codecov.yml  concept.ipl  config.integration.yaml  config.production.yaml  config.yaml  deny.toml  justfile  release-please-config.json  renovate.json  rust-toolchain.toml
crates/api/: Cargo.toml  build.rs
crates/api/benches/: api_throughput.rs
crates/api/src/: health.rs  ledger_invalidation_watcher.rs  lib.rs  test_utils.rs  validation.rs
crates/api/tests/: api_fuzz_tests.rs  grpc_streaming_tests.rs  ledger_integration.rs  memory_leak_tests.rs  multi_tenancy_tests.rs
crates/auth/: Cargo.toml  README.md
crates/auth/fuzz/: README.md
crates/auth/src/: error.rs  extractor.rs  internal.rs  jwt.rs  lib.rs  oauth.rs  oidc.rs  signing_key_cache.rs  validation.rs  vault_middleware.rs
crates/auth/tests/: security_tests.rs  signing_key_cache_ledger_integration.rs
crates/cache/: Cargo.toml
crates/cache/benches/: cache_operations.rs
crates/cache/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: hot_reload.rs  lib.rs  secrets.rs  validation.rs
crates/core/: Cargo.toml
crates/core/benches/: evaluator.rs  ipl_parser.rs  optimizer.rs
crates/core/src/: evaluator_tests.rs  graph.rs  lib.rs  optimizer.rs
crates/core/tests/: consistency.rs  forbid_policies.rs  ipl_parser_fuzz.rs  list_resources_benchmarks.rs  performance_load.rs  role_based_access.rs  wasm_policy.rs
crates/engine/: Cargo.toml
crates/engine/src/: main.rs
crates/infera-api/: Cargo.toml  build.rs
crates/infera-api/benches/: api_throughput.rs
crates/infera-api/proto/: infera.proto
crates/infera-api/src/: content_negotiation.rs  grpc.rs  grpc_interceptor.rs  health.rs  lib.rs  lib.rs.bak  routes.rs  test_utils.rs  validation.rs  vault_validation.rs
crates/infera-api/tests/: api_fuzz_tests.rs  auth_integration_tests.rs  content_negotiation_test.rs  grpc_auth_tests.rs  grpc_streaming_tests.rs  integration.rs  memory_leak_tests.rs  metrics_tests.rs  multi_tenancy_tests.rs
crates/infera-auth/: Cargo.toml  README.md
crates/infera-auth/examples/: internal_service_auth.rs
crates/infera-auth/fuzz/: Cargo.toml  README.md
crates/infera-auth/src/: audit.rs  certificate_cache.rs  context.rs  error.rs  extractor.rs  internal.rs  jwks_cache.rs  jwt.rs  lib.rs  management_auth.rs  management_client.rs  metrics.rs  middleware.rs  oauth.rs  oidc.rs  replay.rs  server_identity.rs  validation.rs  vault_middleware.rs  vault_verification.rs
crates/infera-auth/tests/: jwks_integration.rs  management_auth_integration_tests.rs  oauth_integration_tests.rs  replay_protection_tests.rs  security_tests.rs  vault_auth_tests.rs
crates/infera-bin/: Cargo.toml
crates/infera-bin/src/: initialization.rs  main.rs
crates/infera-bin/tests/: initialization_tests.rs
crates/infera-cache/: Cargo.toml
crates/infera-cache/benches/: cache_operations.rs
crates/infera-cache/src/: lib.rs
crates/infera-config/: Cargo.toml
crates/infera-config/src/: hot_reload.rs  lib.rs  secrets.rs  validation.rs
crates/infera-core/: Cargo.toml
crates/infera-core/benches/: evaluator.rs  ipl_parser.rs  optimizer.rs
crates/infera-core/src/: evaluator.rs  evaluator_tests.rs  graph.rs  ipl.pest  ipl.rs  lib.rs  optimizer.rs  parallel.rs  trace.rs  types.rs
crates/infera-core/tests/: attribute_based_access.rs  consistency.rs  document_management.rs  forbid_policies.rs  ipl_parser_fuzz.rs  list_resources_benchmarks.rs  organization_hierarchy.rs  performance_load.rs  role_based_access.rs  wasm_policy.rs
crates/infera-discovery/: Cargo.toml
crates/infera-discovery/src/: config.rs  error.rs  lib.rs  metrics.rs  refresh.rs  tailscale.rs
crates/infera-observe/: Cargo.toml  README.md
crates/infera-observe/src/: aggregation.rs  audit.rs  lib.rs  logging.rs  metrics.rs  reconfigure.rs  span_utils.rs  tracing_config.rs
crates/infera-repl/: Cargo.toml
crates/infera-repl/src/: agent.rs  change_feed.rs  conflict.rs  lib.rs  router.rs  snapshot.rs  token.rs  topology.rs
crates/infera-repl/tests/: replication_integration.rs
crates/infera-store/: Cargo.toml
crates/infera-store/benches/: memory_backend.rs
crates/infera-store/proptest-regressions/: memory.txt
crates/infera-store/src/: account_store.rs  factory.rs  foundationdb.rs  lib.rs  memory.rs  metrics.rs  vault_store.rs
crates/infera-store/tests/: storage_fuzz_tests.rs  vault_isolation_tests.rs  vault_isolation_tests.rs.bak
crates/infera-test-fixtures/: Cargo.toml
crates/infera-test-fixtures/src/: internal_jwt.rs  lib.rs  relationships.rs
crates/infera-types/: Cargo.toml
crates/infera-types/src/: account.rs  auth.rs  lib.rs  vault.rs
crates/infera-wasm/: Cargo.toml
crates/infera-wasm/src/: host.rs  lib.rs  sandbox.rs
crates/infera-wasm/tests/: sandbox_security.rs
crates/inferadb-api/: Cargo.toml  build.rs
crates/inferadb-api/benches/: api_throughput.rs
crates/inferadb-api/proto/: infera.proto
crates/inferadb-api/src/: content_negotiation.rs  grpc_interceptor.rs  health.rs  lib.rs  test_utils.rs  validation.rs  vault_validation.rs
crates/inferadb-api/tests/: api_fuzz_tests.rs  auth_integration_tests.rs  content_negotiation_test.rs  grpc_auth_tests.rs  grpc_streaming_tests.rs  memory_leak_tests.rs  metrics_tests.rs  multi_tenancy_tests.rs
crates/inferadb-auth/: Cargo.toml  README.md
crates/inferadb-auth/examples/: internal_service_auth.rs
crates/inferadb-auth/fuzz/: Cargo.toml  (+1 more)
crates/inferadb-bin/: Cargo.toml
crates/inferadb-cache/: Cargo.toml
crates/inferadb-core/: Cargo.toml
crates/inferadb-engine-api/: Cargo.toml
crates/inferadb-engine-auth/: Cargo.toml  README.md
crates/inferadb-engine-bin/: Cargo.toml
crates/inferadb-engine-cache/: Cargo.toml
crates/inferadb-engine-control-client/: Cargo.toml
(+776 files in other folders)
