[workspace]
members = [
  "crates/inferadb-engine",
  "crates/inferadb-engine-api",
  "crates/inferadb-engine-auth",
  "crates/inferadb-engine-cache",
  "crates/inferadb-engine-config",
  "crates/inferadb-engine-const",
  "crates/inferadb-engine-control-client",
  "crates/inferadb-engine-core",
  "crates/inferadb-engine-discovery",
  "crates/inferadb-engine-fdb-shared",
  "crates/inferadb-engine-observe",
  "crates/inferadb-engine-store",
  "crates/inferadb-engine-test-fixtures",
  "crates/inferadb-engine-types",
  "crates/inferadb-engine-wasm",
]
resolver = "2"

[workspace.package]
authors = ["InferaDB Project"]
edition = "2021"
homepage = "https://inferadb.com"
license = "BSL-1.1"
publish = false
repository = "https://github.com/inferadb/server"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
# Core async runtime
async-recursion = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.41", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing and observability
metrics = "0.24"
metrics-exporter-prometheus = "0.18.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web frameworks
axum = { version = "0.8.6", features = ["tokio"] }
tonic = "0.14.2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower_governor = "0.8.0"

# WASM runtime
wasmtime = { version = "38.0.4", default-features = false, features = [
  "cache",
  "cranelift",
  "parallel-compilation",
  "runtime",
  "std",
  "wat",
] }

# Storage
foundationdb = { version = "0.10", features = ["fdb-7_3"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15.18"

# Testing
criterion = { version = "0.8.0", features = ["async_tokio"] }
proptest = "1.6"

# Random number generation
rand = "0.9.2"

# Authentication
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
jsonwebtoken = { version = "10.1", default-features = false, features = [
  "aws_lc_rs",
  "ed25519-dalek",
  "use_pem",
] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rustls = { version = "0.23", default-features = false, features = [
  "aws-lc-rs",
  "std",
] }
secrecy = "0.10"
sha2 = "0.10"
uuid = { version = "1.0", features = ["serde", "v4"] }
zeroize = "1.8"

# Kubernetes client
k8s-openapi = { version = "0.23", features = ["v1_31"] }
kube = { version = "0.97", features = ["client", "derive", "runtime"] }

# Terminal utilities
terminal_size = "0.4"
unicode-width = "0.2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true

[profile.bench]
inherits = "release"
