[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inferadb-engine-api"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
test-utils = []
# Enable full fuzz test suite (50-500 iterations instead of 5)
test-full = ["inferadb-engine-test-fixtures/test-full"]

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
moka = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
toon = "0.1"
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "cors"] }
tower_governor = { workspace = true }
tracing = { workspace = true }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

# gRPC dependencies
async-stream = "0.3"
futures = { workspace = true }
pin-project = "1"
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"


# Internal dependencies
inferadb-engine-auth = { path = "../auth" }
inferadb-engine-cache = { path = "../cache" }
inferadb-engine-config = { path = "../config" }
inferadb-engine-const = { path = "../const" }
inferadb-engine-core = { path = "../core" }
inferadb-engine-observe = { path = "../observe" }
inferadb-engine-repository = { path = "../repository" }
inferadb-engine-store = { path = "../store" }
inferadb-engine-types = { path = "../types" }
inferadb-engine-wasm = { path = "../wasm" }

# Shared storage abstraction
inferadb-common-storage = ">=0.1.0-0"

# Ledger SDK (for WatchBlocks cache invalidation)
inferadb-ledger-sdk= ">=0.1.0-0"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14"

[dev-dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true }
ed25519-dalek = { workspace = true }
inferadb-engine-test-fixtures = { path = "../test-fixtures" }
inferadb-common-storage-ledger = ">=0.1.0-0"
jsonwebtoken = { workspace = true }
moka = { workspace = true }
portpicker = "0.1"
proptest = "1"
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
tempfile = "3"
uuid = "1"

[[bench]]
harness = false
name = "api_throughput"

[[test]]
name = "ledger_integration"
path = "tests/ledger_integration.rs"
required-features = ["test-utils"]

[lints]
workspace = true
