[package]
authors.workspace = true
description = "Authentication and authorization for InferaDB"
edition.workspace = true
license.workspace = true
name = "inferadb-engine-auth"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace dependencies
async-trait = "0.1"
bon = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
pem = "3"
prometheus = { version = "0.14", default-features = false }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

# Internal dependencies
inferadb-engine-config = { path = "../config" }
inferadb-engine-observe = { path = "../observe" }
inferadb-engine-store = { path = "../store" }
inferadb-engine-types = { path = "../types" }
# Common crates (uses crates.io with local patch in .cargo/config.toml)
inferadb-common-authn = ">=0.1.0-0"
inferadb-common-storage = ">=0.1.0-0"


[dev-dependencies]
axum = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
inferadb-common-storage-ledger = ">=0.1.0-0"
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { workspace = true, features = ["full", "test-util"] }

[[test]]
name = "signing_key_cache_ledger_integration"
path = "tests/signing_key_cache_ledger_integration.rs"

[features]
default = []

[lints]
workspace = true
