[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inferadb-engine-cache"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bon = { workspace = true }
moka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
inferadb-engine-types = { path = "../types" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
harness = false
name = "cache_operations"

[lints]
workspace = true
