[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inferadb-engine-config"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
config = { workspace = true }
notify = "8"
num_cpus = "1"
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = "0.4"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
