[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inferadb-engine-core"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bon = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Parser options (choose one)
pest = "2.7"
pest_derive = "2.7"
# nom = "7.1"

# Internal dependencies
inferadb-engine-cache = { path = "../cache" }
inferadb-engine-const = { path = "../const" }
inferadb-engine-observe = { path = "../observe" }
inferadb-engine-store = { path = "../store" }
inferadb-engine-types = { path = "../types" }
inferadb-engine-wasm = { path = "../wasm" }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
inferadb-engine-repository = { path = "../repository" }
inferadb-common-storage = { path = "../../../common/crates/storage" }
proptest = { workspace = true }
wat = "1.0"

[[bench]]
harness = false
name = "ipl_parser"

[[bench]]
harness = false
name = "evaluator"

[lints]
workspace = true
