[package]
name = "infera-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "cors"] }
tower_governor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
uuid = { version = "1.10", features = ["v4"] }
urlencoding = "2.1"
hex = "0.4"
sha2 = "0.10"
moka = { workspace = true }

# gRPC dependencies
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
pin-project = "1.1"
futures = { workspace = true }
async-stream = "0.3"

# Internal dependencies
infera-types = { path = "../infera-types" }
infera-auth = { path = "../infera-auth" }
infera-cache = { path = "../infera-cache" }
infera-core = { path = "../infera-core" }
infera-store = { path = "../infera-store" }
infera-config = { path = "../infera-config" }
infera-observe = { path = "../infera-observe" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
moka = { workspace = true }
ed25519-dalek = "2.1"
rand = "0.8"
base64 = "0.22"
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = "1.10"
warp = "0.3"
tempfile = "3.8"
portpicker = "0.1"
proptest = "1.5"
infera-test-fixtures = { path = "../infera-test-fixtures" }
