[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-api"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
hex = "0.4"
moka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "cors"] }
tower_governor = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"
uuid = { version = "1.10", features = ["v4"] }

# gRPC dependencies
async-stream = "0.3"
futures = { workspace = true }
pin-project = "1.1"
prost = "0.13"
tonic = "0.12"
tonic-reflection = "0.12"

# Internal dependencies
infera-auth = { path = "../infera-auth" }
infera-cache = { path = "../infera-cache" }
infera-config = { path = "../infera-config" }
infera-const = { path = "../infera-const" }
infera-core = { path = "../infera-core" }
infera-observe = { path = "../infera-observe" }
infera-store = { path = "../infera-store" }
infera-types = { path = "../infera-types" }
infera-wasm = { path = "../infera-wasm" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
base64 = "0.22"
chrono = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }
ed25519-dalek = "2.1"
infera-test-fixtures = { path = "../infera-test-fixtures" }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
portpicker = "0.1"
proptest = "1.5"
rand = "0.8"
tempfile = "3.8"
tokio-test = "0.4"
uuid = "1.10"
warp = "0.4"

[[bench]]
harness = false
name = "api_throughput"
