[package]
authors = ["InferaDB Team"]
description = "Authentication and authorization for InferaDB"
edition = "2021"
license = "Apache-2.0"
name = "infera-auth"
version = "0.1.0"

[dependencies]
# Workspace dependencies
async-trait = "0.1"
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6"                       # Constant-time comparisons for cryptographic operations
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

# Optional dependencies
redis = { version = "0.27", features = [
  "connection-manager",
  "tokio-comp",
], optional = true }

# Internal dependencies
infera-config = { path = "../infera-config" }
infera-observe = { path = "../infera-observe" }
infera-types = { path = "../infera-types" }

[dev-dependencies]
axum = { workspace = true }
futures = { workspace = true }
proptest = "1.4"
rand = "0.8"
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4"

[features]
default = []
replay-protection = ["redis"]
