[package]
authors.workspace = true
description = "Authentication and authorization for InferaDB"
edition.workspace = true
license.workspace = true
name = "infera-auth"
publish.workspace = true
version.workspace = true

[dependencies]
# Workspace dependencies
async-trait = "0.1"
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

# Optional dependencies
redis = { version = "0.27", features = [
  "connection-manager",
  "tokio-comp",
], optional = true }

# Internal dependencies
infera-config = { path = "../infera-config" }
infera-observe = { path = "../infera-observe" }
infera-types = { path = "../infera-types" }

[dev-dependencies]
axum = { workspace = true }
futures = { workspace = true }
proptest = "1.4"
rand = "0.8"
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4"

[features]
default = []
replay-protection = ["redis"]
