[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-bin"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "infera_bin"
path = "src/lib.rs"

[[bin]]
name = "inferadb-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
moka = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
infera-api = { path = "../infera-api" }
infera-auth = { path = "../infera-auth" }
infera-cache = { path = "../infera-cache" }
infera-config = { path = "../infera-config" }
infera-core = { path = "../infera-core" }
infera-observe = { path = "../infera-observe" }
infera-store = { path = "../infera-store" }
infera-types = { path = "../infera-types" }
infera-wasm = { path = "../infera-wasm" }

[dev-dependencies]
futures = { workspace = true }
