[package]
name = "infera-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
moka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
infera-store = { path = "../infera-store" }
infera-observe = { path = "../infera-observe" }

[dev-dependencies]
tokio-test = "0.4"
criterion = { workspace = true }

[[bench]]
name = "cache_operations"
harness = false
