[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-cache"
publish.workspace = true
version.workspace = true

[dependencies]
moka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
infera-observe = { path = "../infera-observe" }
infera-store = { path = "../infera-store" }
infera-types = { path = "../infera-types" }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"

[[bench]]
harness = false
name = "cache_operations"
