[package]
name = "infera-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
aws-secrets = ["aws-config", "aws-sdk-secretsmanager"]
gcp-secrets = ["google-secretmanager1"]
azure-secrets = ["azure_security_keyvault", "azure_identity"]

[dependencies]
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
num_cpus = "1.16"
tokio = { workspace = true }
notify = "6.1"
signal-hook = "0.3"

# AWS Secrets Manager (optional)
aws-config = { version = "1.5", optional = true }
aws-sdk-secretsmanager = { version = "1.52", optional = true }

# GCP Secret Manager (optional)
google-secretmanager1 = { version = "5.0", optional = true }

# Azure Key Vault (optional)
azure_security_keyvault = { version = "0.20", optional = true }
azure_identity = { version = "0.20", optional = true }

[dev-dependencies]
tempfile = "3.14"
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
