[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-config"
version.workspace = true

[features]
aws-secrets = ["aws-config", "aws-sdk-secretsmanager"]
azure-secrets = ["azure_identity", "azure_security_keyvault"]
gcp-secrets = ["google-secretmanager1"]

[dependencies]
clap = { workspace = true }
config = { workspace = true }
notify = "6.1"
num_cpus = "1.16"
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# AWS Secrets Manager (optional)
aws-config = { version = "1.5", optional = true }
aws-sdk-secretsmanager = { version = "1.52", optional = true }

# GCP Secret Manager (optional)
google-secretmanager1 = { version = "6.0", optional = true }

# Azure Key Vault (optional)
azure_identity = { version = "0.29", optional = true }
azure_security_keyvault = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
