[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-config"
rust-version.workspace = true
publish.workspace = true
version.workspace = true

[features]
aws-secrets = ["aws-config", "aws-sdk-secretsmanager"]
azure-secrets = ["azure_identity", "azure_security_keyvault_secrets"]
gcp-secrets = ["google-cloud-secretmanager-v1"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
notify = "8.2.0"
num_cpus = "1.16"
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# AWS Secrets Manager (optional)
aws-config = { version = "1.5", optional = true }
aws-sdk-secretsmanager = { version = "1.52", optional = true }

# GCP Secret Manager (optional) - Official Google Cloud SDK
google-cloud-secretmanager-v1 = { version = "1.1", optional = true }

# Azure Key Vault (optional)
azure_identity = { version = "0.29", optional = true }
azure_security_keyvault_secrets = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
