[package]
name = "infera-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
base64 = "0.22"

# Parser options (choose one)
pest = "2.7"
pest_derive = "2.7"
# nom = "7.1"

# Internal dependencies
infera-store = { path = "../infera-store" }
infera-wasm = { path = "../infera-wasm" }
infera-observe = { path = "../infera-observe" }
infera-cache = { path = "../infera-cache" }

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "ipl_parser"
harness = false

[[bench]]
name = "evaluator"
harness = false
