[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-core"
rust-version.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Parser options (choose one)
pest = "2.7"
pest_derive = "2.7"
# nom = "7.1"

# Internal dependencies
infera-cache = { path = "../infera-cache" }
infera-const = { path = "../infera-const" }
infera-observe = { path = "../infera-observe" }
infera-store = { path = "../infera-store" }
infera-types = { path = "../infera-types" }
infera-wasm = { path = "../infera-wasm" }

[dev-dependencies]
criterion = { workspace = true }
infera-test-fixtures = { path = "../infera-test-fixtures" }
proptest = { workspace = true }
tokio-test = "0.4"
wat = "1.0"

[[bench]]
harness = false
name = "ipl_parser"

[[bench]]
harness = false
name = "evaluator"
