[package]
name = "infera-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# Kubernetes client
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# URL parsing
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_yaml = "0.9"
serde_json = { workspace = true }
