[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "infera-discovery"
rust-version.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Kubernetes client
k8s-openapi = { workspace = true }
kube = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Metrics
metrics = { workspace = true }

# URL parsing
url = "2.5"

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true, features = ["macros", "test-util"] }
